# BIDUA_Hosting-main

./: .replit  pyproject.toml  replit.md
backend_template/: .env.example
backend_template/alembic/versions/: 1378acccf36f_add_cpu_to_addon_category_enum.py  add_order_id_to_servers.py
backend_template/app/api/v1/: api.py
backend_template/app/api/v1/endpoints/: admin_pricing.py  payments.py  servers.py  services.py
backend_template/app/services/: order_service.py  server_service.py
